        fix Python extension compilation warning (Jan Dittberner)
        add a long description to Python extension (Jan Dittberner)
        add Hindi translation (Rajesh Ranjan)
        add Korean translation (Eunju Kim)
        updated Russian translation (Yulia Poyarko)
        fix filename output in Python exceptions (Nalin Dahyabhai)
	fix format strings in util/packer.c (Mike Frysinger)
v2.8.15 allow building of Python extension outside source folder (Jan Dittberner)
        fix type on Python extension's trove classifier
        reflect license change discussion that was never actually implemented in the repository and update to LGPL
v2.8.14 Added Assamese translation (Amitakhya Phukan)
        Added Bengali India translation (Runa Bhattacharjee)
        Added Gujarati translation (Ankit Patel)
        Added Kannada translation (shankysringeri)
        Added Malayalam translation (Ani Peter)
        Added Marathi translation (Sandeep Shedmake)
        Added Oriya translation (Manoj Giri)
        Added Russian translation (Anton Dobkin)
        Added Tamil translation (I. Felix)
        Added Telugu translation (Krishna Babu)
        Updated Polish translation (Piotr Drąg)
        Updated Panjabi translation (A S Alam)
        optimize order of commands in util/cracklib-format (Jan Dittberner, Debian)
        fix several CC warnings (Jan Dittberner, Debian)
        add a function GetDefaultCracklibDict() to libcrack
        bump library revision
        add python/setup.py.in to allow building eggs
v2.8.13 Compressed dictionary support and better python module
v2.8.11 Better create-cracklib-dict helper script (Mike Frysinger)
v2.8.10 Patch for better hanlding of cracklist dictionary paths in python binding. (Nalin Dahyabhai)
v2.8.8  Some shell quoting fixups for build scripts (Mike Frysinger)
v2.8.7  Add support for NLS builds on FreeBSD
v2.8.6  Add some sanity checkng to auto* script calls. (Mike Frysinger)